# IQAutoJobs

./: .dockerignore  .gitignore  .replit  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.prod  FEATURES_COMPLETE.md  FEATURES_IMPLEMENTED.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_COMPLETE.md  OAUTH_IMPLEMENTATION_SUMMARY.md  Procfile  README.md  ROOT_CAUSE_REPORT.md  TESTING_GUIDE.md  app.py  build.sh  docker-compose.yml  jest.config.js  jest.setup.js  models.py  next.config.js  next.config.ts  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  requirements.txt  routes.py  server.ts  start-dev.sh  tailwind.config.ts  test_routes.py  test_security.py  test_setup.py  wsgi.py
Backend/: requirements.txt
__tests__/: jobs.test.tsx
attached_assets/: Pasted--Frontend-Next-js-15-React-framework-with-App-Router-TypeScript-5-Type-safe-J-1761471298047_1761471298047.txt  Pasted--IQAutoJobs-Modern-Job-Platform-A-comprehensive-job-platform-built-with-modern-technologies--1761471328824_1761471328824.txt  Pasted-1s-6-RUN-npm-run-build-18s-nextjs-tailwind-shadcn-ts-0-1-0-build-next-build-Attention-Next-js-n-1761466058390_1761466058390.txt  Pasted-6-RUN-npm-run-build-19s-nextjs-tailwind-shadcn-ts-0-1-0-build-next-build-Attention-Next-js-now--1761465664445_1761465664446.txt  Pasted-AutoJobs-Failed-Oct-26-2025-10-42-AM-iqautojobs-com-Get-Help-Search-build-logs-You-reached-the-s-1761465086702_1761465086702.txt
backend/: .dockerignore  .env  Dockerfile  __init__.py  alembic.ini  app.py  create_sample_data.py  db.py  main.py  migrate.py  models.py  railway.toml  s3.py  (+6 more)
(+149 files in other folders)
