[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.1",
    "blinker==1.8.2",
    "boto3==1.34.138",
    "click==8.1.7",
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "flask-jwt-extended==4.5.3",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==22.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "mako==1.3.5",
    "markupsafe==2.1.5",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.8.0",
    "pytest==8.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy==2.0.30",
    "typing-extensions==4.12.2",
    "werkzeug==3.0.3",
]
